Revision history for Word-Rhymes

1.01 UNREL
        -

1.00    2020-12-18
        - Fix CI and coverage badge links
        - Broke up the processing parts of fetch() and put them into a new
          _process() method
        - Added POD for private methods
        - Removed erroneous EXPORT section from POD

0.01    2020-12-18
        First version, released on an unsuspecting world.
